# CloudCompare

./: .gitignore
plugins/core/Standard/: CMakeLists.txt
plugins/core/Standard/qElementPickup/: CMakeLists.txt  info.json  qElementPickup.qrc
plugins/core/Standard/qElementPickup/include/: CMakeLists.txt  ElementPickupAction.h  qElementPickup.h
plugins/core/Standard/qElementPickup/src/: CMakeLists.txt  ElementPickupAction.cpp  qElementPickup.cpp
